syntax = "proto2";

package graph_curation;

import "google/protobuf/timestamp.proto";

message UsersDocument {
    message UserRole {
        enum Enum {
            SUPER_ADMIN = 1;
            SME = 2;
            ADMIN = 3;
        }
    }
    optional string _id = 1;
    optional string _key = 2; // username
    optional string _rev = 3;
    optional string username = 4;
    optional string first_name = 5;
    optional string last_name = 6;
    optional string email = 7;
    optional UserRole.Enum role = 8;
    optional string password = 9;
    optional int32 is_active = 10;
    optional string color = 11;
}

message ChaptersDocument {
    optional string _id = 1;
    optional string _key = 2; //chapter_id
    optional string _rev = 3;
    optional int32 standard = 4;
    optional string subject = 5;
    optional string book = 6;
    optional string chapter = 7;
    optional string locked_to = 8 [default = ''];
}

message TasksDocument {
    message TaskStatus {
        enum Enum {
            COMPLETED = 1;
            PENDING = 2;
            NOT_YET_ASSIGNED = 3;
            ABORTED = 4;
        }
    }
    optional string _id = 1;
    optional string _key = 2; //task_id
    optional string _rev = 3;
    optional string chapter_key = 4;
    optional string chapter = 5;
    optional string assigned_to = 6;
    optional string assigned_by = 7;
    optional google.protobuf.Timestamp assigned_time = 8;
    optional google.protobuf.Timestamp completed_time = 9;
    optional TaskStatus.Enum status = 10;
}

message SubTasksDocument {
    message SubTaskStatus {
        enum Enum {
            COMPLETED = 1;
            PENDING = 2;
        }
    }
    optional string _id = 1;
    optional string _key = 2; //sub_task_id
    optional string _rev = 3;
    optional string task_key = 4;
    optional string concept_key = 5;
    optional string concept = 6;
    optional SubTaskStatus.Enum status = 7;
    optional google.protobuf.Timestamp assigned_time = 8;
    optional google.protobuf.Timestamp completed_time = 9;
}

message RevokedTokenDocument {
    optional string _id = 1;
    optional string _key = 2; //revoked token
    optional string _rev = 3;
}

message ChapterConcepts {
    optional string _id = 1;
    optional string _key = 2;
    optional string _rev = 3;
    optional string name = 4;
    optional string id = 5;
}

message McqEdges {
    optional string _id = 1;
    optional string _key = 2;
    optional string _rev = 3;
    optional string _from = 4;
    optional string _to = 5;
    optional string mcq_id = 6;
    optional string created_by = 7;
    optional string created_time = 8;
    optional string to_concept_name = 9;
    optional string to_concept_id = 10;
    optional string from_concept_name = 11;
    optional string from_concept_id = 12;
}

message Mcq {
    message Concept {
        optional string id = 1;
        optional string name = 2;
    }
    message Aspect {
        optional string aspect = 1;
        optional string concept = 2;
    }
    message Question {
        optional string rawText = 1;
        optional string cleanText = 2;
        repeated Concept dominantConcepts = 3;
        repeated Concept nonDominantConcepts = 4;
        repeated Aspect aspects = 5;
    }
    message Option {
        optional string rawText = 1;
        optional string cleanText = 2;
        optional int32 level = 3;
        optional bool isCorrect = 4;
        repeated Concept dominantConcepts = 5;
        repeated Concept nonDominantConcepts = 6;
    }
    optional string mcqId = 1;
    optional string contextId = 2;
    optional Question question = 3;
    repeated Option options = 4;
    optional string type = 5;
    optional int32 questionLevel = 6;
    optional string standard = 7;
    optional string subject = 8;
    optional string chapter = 9;
    optional int32 chapterId = 10;
    optional string _key = 11;
    optional string _id = 12;
    optional string _rev = 13;
    optional string status = 14;
}
